adding view single stream

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="sample_widget">Picasso Sample Widget</string>
     <string name="sample_notification">Picasso Sample Notification</string>
     <string name="select_picture">Select Picture</string>
+    <string name="title_activity_single_stream">SingleStreamActivity</string>
 
 </resources>
