adding working code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,9 @@
     <string name="btnIntend">button 1</string>
     <string name="btnIntendS">Use Camera</string>
     <string name="btnIntendV">button V</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-
 
     <!-- Fragment section titles -->
     <string name="title_section1">Simple Camera Intent</string>
@@ -32,5 +30,6 @@
     <string name="title_section3">Image Picker</string>
     <string name="title_section4">Native Camera</string>
     <string name="title_section5">Horizontal Gallery</string>
+    <string name="title_activity_nearby">NearbyActivity</string>
 
 </resources>
